DOM complete first game in JavaScript (Pig game).

--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,300,600" type="text/css">
-        <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" type="text/css">
+        <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,300,600" type="text/css"> -->
+        <!-- <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" type="text/css"> -->
         <link rel="stylesheet" href="style.css" type="text/css">
 
-        <title>Pig Game</title>
+        <title>Pig Game By Maruf Robin</title>
     </head>
 
     <body>
+        
         <div class="wrapper clearfix">
+            <div class="dev-name"> Made By Maruf Robin</div>
             <div class="player-0-panel active">
                 <div class="player-name" id="name-0">player 1</div>
                 <div class="player-score" id="score-0">43</div>
@@ -31,11 +33,9 @@
             <button class="btn-new"><i class="ion-iso-plus-outline"></i>New Game</button>
             <button class="btn-roll"><i class="ion-iso-loop"></i> Roll Dice</button>
             <button class="btn-hold"><i class="ion-iso-download-outline"></i>Hold</button>
-            <div id="terget-score-header">Terget Score: 100</div>
-            <input type="number" id="terget-score-input" placeholder="Select a terget" />
+            <div class="terget-score-header">Terget Score: 100</div>
 
             <img src="dice-5.png" alt="Dice" class="dice" id="dice-1">
-            <img src="dice-5.png" alt="Dice" class="dice" id="dice-2">
         </div>
         <script src="app.js"></script>
     </body>
